sass/_print.scss
@media print {
  #employment{
    padding-top: 50px;
  }
  #sidebar {
    display: none;
  }
  .row {
    display: none;
  }
  .projtoggle {
    display: none;
  }
  #experience {
    display: none;
  }
  main {
    margin: 30px 20px;
    h1 {
      margin-top: 5px;
      padding-top: 0px;
    }
    #pdfSkills {
     display: inline-block;
    }
    #pdfTitle {
      font-size: 1.2em;
      text-align: center;
      display: inline-block;
      h2 {
        margin-top: 10px;
        font-size: 1.7em;
      }
      h3 {
        font-size: 1em;
        margin: 2px;
      }
      .mobile-icon {
        width: 5%;
      }  
      #animation {
        display: none;
      }
      #education {
        page-break-after: always;
        }
      a[href]:after {
        content: none !important;
      }
    }
  }
}

